// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component sanity matches default snapshot 1`] = `
.c0 {
  width: 2rem;
  height: 2rem;
}

.c0 {
  box-sizing: border-box;
}

.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 100%;
  background: center no-repeat;
  background-size: cover;
  background-color: #CCC;
  background-image: url();
}

<div
  alt="Avatar"
  class="c0"
/>
`;

exports[`Avatar component sanity matches themed snapshot 1`] = `
.c1 {
  width: 2rem;
  height: 2rem;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  overflow: hidden;
  border-radius: 100%;
  background: center no-repeat;
  background-size: cover;
  background-color: #CCC;
  background-image: url();
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    alt="Avatar"
    class="c1"
  />
</div>
`;
